css/styles.css
.banner {
    position: relative;
    background-image: url(./img/banner-vector.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: auto;
    color: #fff;
    padding: 30px;
}

body {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

.vector {
  background: linear-gradient(257.1deg, #ae35eb 27.51%, #4052F0 113.53%);
  background-blend-mode: screen;
}

.form-control {
    border: 0;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#009688), to(#009688)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
    background-image: -webkit-linear-gradient(#009688, #009688), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
    background-image: -o-linear-gradient(#009688, #009688), -o-linear-gradient(#D2D2D2, #D2D2D2);
    background-image: linear-gradient(#009688, #009688), linear-gradient(#D2D2D2, #D2D2D2);
    -webkit-background-size: 0 2px, 100% 1px;
    background-size: 0 2px, 100% 1px;
    background-repeat: no-repeat;
    background-position: center bottom, center -webkit-calc(100% - 1px);
    background-position: center bottom, center calc(100% - 1px);
    background-color: rgba(0, 0, 0, 0);
    -webkit-transition: background 0s ease-out;
    -o-transition: background 0s ease-out;
    transition: background 0s ease-out;
    float: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    border-radius: 0;
    padding: 10px;
}

.form-control::placeholder {
    color: #aaa;
    font-size: 1.5em;
}

